# lib/crm/adapters/get_into_teaching/resources/teaching_events_resource.rb
@@ -5,17 +5,17 @@ module CRM
         class TeachingEventsResource < CRM::Adapters::GetIntoTeaching::Resource
           def all(params)
             response = get_request("/api/teaching_events/search", params:)
-            response_to_collection(response, type: CRM::Resources::TeachingEventResource)
+            response_to_collection(response, type: CRM::Resources::TeachingEvents::Resource)
           end
 
           def find(id)
             response = get_request("/api/teaching_events/#{id}")
-            response_to_type(response, type: CRM::Resources::TeachingEventResource)
+            response_to_type(response, type: CRM::Resources::TeachingEvents::Resource)
           end
 
           def create(body)
             response = post_request("/api/teaching_events", body:)
-            response_to_type(response, type: CRM::Resources::TeachingEventResource)
+            response_to_type(response, type: CRM::Resources::TeachingEvents::Resource)
           end
 
           def create_attendee(body)
@@ -23,13 +23,13 @@ module CRM
           end
 
           def exchange_unverified_request(body)
-            response = post_request("app/views/api/teaching_events/exchange_unverified_requests", body:)
-            response_to_type(response, type: CRM::Resources::TeachingEventAddAttendeeResource)
+            response = post_request("/api/teaching_events/attendees/exchange_unverified_request", body:)
+            response_to_type(response, type: CRM::Resources::TeachingEvents::ExchangeUnverifiedRequestResource)
           end
 
           def exchange_access_token(token, body)
             response = post_request("/api/teaching_events/attendees/exchange_access_token/#{token}", body:)
-            response_to_type(response, type: CRM::Resources::TeachingEventAddAttendeeResource)
+            response_to_type(response, type: CRM::Resources::TeachingEvents::AddAttendeeResource)
           end
         end
       end
